--- a/src/config.json
+++ b/src/config.json
@@ -1,9 +1,9 @@
 {
-    "app_id": "com.moodle.moodlemobile",
-    "appname": "Moodle Mobile",
-    "desktopappname": "Moodle Desktop",
+    "app_id": "net.classnet.mobile",
+    "appname": "Classnet Mobile",
+    "desktopappname": "Classnet Desktop",
     "versioncode": 3710,
-    "versionname": "3.7.1",
+    "versionname": "1.1.2",
     "cache_update_frequency_usually": 420000,
     "cache_update_frequency_often": 1200000,
     "cache_update_frequency_sometimes": 3600000,
@@ -74,12 +74,12 @@
         93.75
     ],
     "customurlscheme": "moodlemobile",
-    "siteurl": "",
-    "sitename": "",
+    "siteurl": "https://www.classnet.net",
+    "sitename": "classnet",
     "multisitesdisplay": "",
     "skipssoconfirmation": false,
     "forcedefaultlanguage": false,
-    "privacypolicy": "https:\/\/moodle.org\/mod\/page\/view.php?id=8148",
+    "privacypolicy": "https:\/\/www.classnet.net\/privacypolicy\/view.php",
     "notificoncolor": "#f98012",
     "statusbarbg": false,
     "statusbarlighttext": false,
