more custozation . 31 changes are commiting.

--- a/src/config.json
+++ b/src/config.json
@@ -2,7 +2,7 @@
     "app_id": "net.classnet.mobile",
     "appname": "Classnet Mobile",
     "desktopappname": "Classnet Desktop",
-    "versioncode": 3710,
+    "versioncode": 1112,
     "versionname": "1.1.2",
     "cache_update_frequency_usually": 420000,
     "cache_update_frequency_often": 1200000,
@@ -75,7 +75,7 @@
     ],
     "customurlscheme": "moodlemobile",
     "siteurl": "https://www.classnet.net",
-    "sitename": "classnet",
+    "sitename": "",
     "multisitesdisplay": "",
     "skipssoconfirmation": false,
     "forcedefaultlanguage": false,
