--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "moodlemobile",
-  "version": "3.7.1",
-  "description": "The official app for Moodle.",
+  "name": "classnetmobile",
+  "version": "1.1.2",
+  "description": "The official app for Classnet.",
   "author": {
-    "name": "Moodle Pty Ltd.",
-    "email": "mobile@moodle.com"
+    "name": "Classnet mobile Team.",
+    "email": "mobile@classnet.net"
   },
   "config": {
     "ionic_webpack": "./config/webpack.config.js",
@@ -42,8 +42,8 @@
   "dependencies": {
     "@angular/animations": "5.2.10",
     "@angular/common": "5.2.10",
-    "@angular/compiler": "5.2.10",
-    "@angular/compiler-cli": "5.2.10",
+    "@angular/compiler": "^7.2.15",
+    "@angular/compiler-cli": "^7.2.15",
     "@angular/core": "5.2.10",
     "@angular/forms": "5.2.10",
     "@angular/http": "5.2.10",
@@ -80,8 +80,8 @@
     "@types/promise.prototype.finally": "2.0.2",
     "chart.js": "2.7.2",
     "com-darryncampbell-cordova-plugin-intent": "1.1.7",
-    "cordova": "8.1.2",
-    "cordova-android": "7.1.2",
+    "cordova": "^9.0.0",
+    "cordova-android": "^8.1.0",
     "cordova-android-support-gradle-release": "3.0.1",
     "cordova-clipboard": "1.3.0",
     "cordova-ios": "4.5.5",
